---------------------------------------------------------------------------------------------------
Version: 3.0.4
Date: ??????
  Features:
    - Filter Fill now works on the player inventory.
  Enhancements:
    - Changed the way notes are saved.
    - Sort Inventory now uses sort_and_merge inventory method
  Bugfixes:
    - Include changelog in release. #68
    - Reverse rotating saved dollies is now possible. Factorio Bug.
    - Fix map ping item description.
    - Fix filter fill nil error if mods change to custom gui. #72
    - Fix zapper being all undecidy in god mode. #70
    - Fix aggresive search in autodeconstruct.
---------------------------------------------------------------------------------------------------
Version: 3.0.3
Date: ??????
  Changes:
    - Better GUI support in some spots.
    - Per User setting added for simple quick entity blueprinting.
  Bugfixes:
    - Fix another notes gui error. #66
    - Fix Area tostring error in stdlib. Rotype
---------------------------------------------------------------------------------------------------
Version: 3.0.2
Date: ??????
  Bugfixes:
    - Fix rotating for real this time. (reverse saved rotate disabled due to factorio bug in .16.3)
    - Fix sticky-sign/note error.
    - Fix notes gui error.
---------------------------------------------------------------------------------------------------
Version: 3.0.1
Date: ??????
  Bugfixes:
    - No longer rotate entities when holding an item in your hand.
    - Remove uneeded code on planner menu.
    - Fix nil error
---------------------------------------------------------------------------------------------------
Version: 3.0.0
Date: ??????
  Features:
    - Moved data only tweaks to seperate mod. "Picker Tweaks"
    - Sticky Notes.  Add notes on any entity with ALT - W.
    - Quick Blueprinter. Makes a quick blueprint of any selected Entity with CTRL - Q
    - Map Ping. Pings the map when the map ping selection tool is used.