@@ -36,6 +36,6 @@ return {
         'creative-mode_super-substation',
         'creative-mode_magic-wand-modifier',
         'creative-mode_super-roboport',
-        'infinity-chest'
+        'picker-infinity-chest'
     }
 }
