@@ -1,0 +1,23 @@
+[mod-setting-name]
+picker-cheat-recipes=Picker Cheat Recipes
+[mod-setting-description]
+picker-cheat-recipes=Enable Picker cheat recipes
+
+[entity-name]
+picker-infinity-chest=Infinity Chest
+picker-infinity-storage-chest=Infinity Storage Chest
+picker-infinity-requester-chest=Infinity Requester Chest
+picker-infinity-active-chest=Infinity Requester Chest
+picker-infinity-passive-chest=Infinity Requester Chest
+picker-infinity-buffer-chest=Infinity Requester Chest
+
+[entity-description]
+picker-infinity-chest=Infinity Chest
+picker-infinity-storage-chest=Infinity Storage Chest
+picker-infinity-requester-chest=Infinity Requester Chest
+picker-infinity-active-chest=Infinity Active Provider Chest
+picker-infinity-passive-chest=Infinity Passive Provider Chest
+picker-infinity-buffer-chest=Infinity Buffer Chest
+
+[item-group-name]
+picker-cheats=Picker Cheats
