@@ -23,6 +23,13 @@ data:extend {
         setting_type = 'startup',
         default_value = true,
         order = 'picker[startup][colored-blueprints]'
+    },
+    {
+        type = 'bool-setting',
+        name = 'picker-cheat-recipes',
+        setting_type = 'startup',
+        default_value = false,
+        order = 'picker[startup][cheats]'
     }
 }
 
